// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Filter displays correct translations 1`] = `
<div>
  <span>
    Show fertig
  </span>
  <label
    htmlFor="todoStateSwitch"
  >
    <span
      className="MuiSwitch-root-1"
    >
      <span
        className="MuiButtonBase-root-20 MuiIconButton-root-14 MuiPrivateSwitchBase-root-10 MuiSwitch-switchBase-4 MuiSwitch-colorPrimary-6"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-19"
        >
          <span
            className="MuiSwitch-icon-2"
          />
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-13"
            id="todoStateSwitch"
            onChange={[Function]}
            type="checkbox"
          />
        </span>
        <span
          className="MuiTouchRipple-root-23"
        />
      </span>
      <span
        className="MuiSwitch-bar-9"
      />
    </span>
  </label>
</div>
`;

exports[`A Filter renders component 1`] = `
<div>
  <span>
    Show Done
  </span>
  <label
    htmlFor="todoStateSwitch"
  >
    <span
      className="MuiSwitch-root-1"
    >
      <span
        className="MuiButtonBase-root-20 MuiIconButton-root-14 MuiPrivateSwitchBase-root-10 MuiSwitch-switchBase-4 MuiSwitch-colorPrimary-6"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-19"
        >
          <span
            className="MuiSwitch-icon-2"
          />
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-13"
            id="todoStateSwitch"
            onChange={[Function]}
            type="checkbox"
          />
        </span>
        <span
          className="MuiTouchRipple-root-23"
        />
      </span>
      <span
        className="MuiSwitch-bar-9"
      />
    </span>
  </label>
</div>
`;

exports[`A Filter selects a button based on the value of its 'filter' prop 1`] = `
<div>
  <span>
    Show Done
  </span>
  <label
    htmlFor="todoStateSwitch"
  >
    <span
      className="MuiSwitch-root-1"
    >
      <span
        className="MuiButtonBase-root-20 MuiIconButton-root-14 MuiPrivateSwitchBase-root-10 MuiSwitch-switchBase-4 MuiSwitch-colorPrimary-6 MuiPrivateSwitchBase-checked-11 MuiSwitch-checked-5"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-19"
        >
          <span
            className="MuiSwitch-icon-2 MuiSwitch-iconChecked-3"
          />
          <input
            checked={true}
            className="MuiPrivateSwitchBase-input-13"
            id="todoStateSwitch"
            onChange={[Function]}
            type="checkbox"
          />
        </span>
        <span
          className="MuiTouchRipple-root-23"
        />
      </span>
      <span
        className="MuiSwitch-bar-9"
      />
    </span>
  </label>
</div>
`;
